Checking R in windows