@@ -4,8 +4,11 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URL;
 import java.util.Date;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -26,7 +29,9 @@ public class StatsServiceImpl implements StatsService {
 
 	@Autowired
 	RouterService routerService;
-
+	
+	private final static Logger log = LoggerFactory
+			.getLogger(StatsServiceImpl.class);
 	
 	@Override
 	public void process(Context ctx) {
@@ -78,30 +83,51 @@ public class StatsServiceImpl implements StatsService {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 			ctx.setStatus(Status.ANALYSIS_FAILED);
+		} catch (Exception e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+			ctx.setStatus(Status.ANALYSIS_FAILED);
 		}
 
 	}
 
 	@Override
-	public void calculateStats(String fileName) throws IOException,
-			InterruptedException {
-		// TODO check if R is installed
-		// TODO generalize paths
-		// FIXME path to R script
-		// # At home
-		//String script = "C:/Users/Hania/Desktop/fileup/src/main/resources/analyse.R";
-		//String exe = "C:/Program Files/R/R-3.0.0/bin/x64/Rscript.exe";
-		String script = "C:/Users/hcwi/Documents/workspace-sts-3.2.0.RELEASE/phen/src/main/resources/analyse.R";
-		String exe = "Rscript.exe";
-		// # At IGR
+	public void calculateStats(String fileName) throws Exception {
+		
+		// TODO check if R is installed - win/linux
+		
+		String rHome = System.getenv("R_HOME");
+		if (rHome == null) {
+			throw new Exception("System variable R_HOME is missing.");
+		}
+		String exe = rHome+"/bin/x64/Rscript.exe";
+		System.out.println("==========\nR exe = "+exe);
+		boolean can = new File(exe).canExecute();
+		System.out.println("can execute = " + can); 
+		if (!can) {
+			throw new Exception("R executable not found. Analysis failed.");
+		}
+		
+		URL scriptUrl = this.getClass().getClassLoader().getResource("analyse.R");
+		if (scriptUrl == null) {
+			throw new Exception("Couldn't find script analyse.R");
+		}
+		String script = scriptUrl.getFile().substring(1);
+		System.out.println("script = " + script);
+		
 		String wd = fileName;
-		String command = exe + " " + script + " " + wd;
-		System.err.println(command);
-		Process p = Runtime.getRuntime().exec(command);
+		System.out.println("working dir = " + wd);
+		
+		Process p;
+		p = Runtime.getRuntime().exec(new String[] {exe, script, wd});
+		p.getErrorStream();
+		
+		//TODO return error when R isn't there + when libraries are missing (they won't install on their own unless cran mirror is chosen)
+		
 		BufferedReader br = new BufferedReader(new InputStreamReader(p.getErrorStream()));
 		String line;
 		while ((line = br.readLine()) != null) {
-			System.err.println(line);
+			log.info(line);
 		}
 		p.waitFor();
 		int success = p.exitValue();
@@ -109,6 +135,8 @@ public class StatsServiceImpl implements StatsService {
 		if (success != 0) {
 			// TODO recognize and handle errors
 		}
+		
+		//TODO don't show "Download statistics" if analysis failed
 	}
 
 	/*
@@ -116,8 +144,11 @@ public class StatsServiceImpl implements StatsService {
 	 * 
 	 * @Transactional public void calculateStats(String fileName) {
 	 * 
-	 * //TODO rethink using JRI //cannot be initialized twice //R_HOME, R.dll in
-	 * path, jri.dll in path Rengine re = new Rengine (new
+	 * //TODO rethink using JRI 
+	 * //cannot be initialized twice 
+	 * //R_HOME, R.dll in path, jri.dll in path 
+	 * 
+	 * Rengine re = new Rengine (new
 	 * String[]{"--no-save"}, false, null);
 	 * System.out.println("Rengine created, waiting for R");
 	 * 
@@ -137,9 +168,12 @@ public class StatsServiceImpl implements StatsService {
 	 * 
 	 * REXP ans = re.eval(
 	 * "source('c://Users//hcwi//Documents//workspace-sts-3.2.0.RELEASE//fileup//src//main//resources//analyse.R')"
-	 * ); //re.eval("write(mean(t$V1), file='source.txt');"); // //String
-	 * command = "analyse('" + fileName + "')"; //ans = re.eval("mean(1:10)");
-	 * System.err.println("\n\n R call result: " + ans + "\n\n"); //re.run();
+	 * ); 
+	 * //re.eval("write(mean(t$V1), file='source.txt');"); 
+	 * // 
+	 * //String command = "analyse('" + fileName + "')"; //ans = re.eval("mean(1:10)");
+	 * System.err.println("\n\n R call result: " + ans + "\n\n"); 
+	 * //re.run();
 	 * 
 	 * System.err.println(re.eval("getwd()").asString());
 	 * 
